fix: Resolve Java 22 deprecation warnings and simplify Allure logging
- Fixed Thread.getId() deprecation by replacing with Thread.threadId()

- Fixed URL(String) deprecation by using URI.create().toURL()

- Fixed Runtime.exec(String) deprecation by using String[] array

- Fixed unused lambda parameters with underscore (_) for Java 22

- Fixed Logger imports and ThreadLocal.get() issues

- Fixed pom.xml invalid Allure plugin configurations

- Simplified AllureReportingManager logging to minimal output